gsl_simulation/static/css/simulation_detail.css
/* table */
.gsl-projet-table__select {
  text-align: right;
  padding: 0.25rem 1.25rem 0.25rem 0.25rem;
  background-position: calc(100% - 4px) 50%;
  box-shadow: none
}

.gsl-projet-table__input-wrap {
  position: relative;
  display: inline-block;
}

.gsl-projet-table__input-wrap > input {
  text-align: right;
  padding: 0.25rem 0.5rem;
}

.simulation-menu {
  display: inline-block;
}

.gsl-projet-table__dotation-dropdown {
  width: fit-content;
}

.gsl-projet-table__dotation-dropdown > button {
  line-height: inherit;
}

.gsl-projet-table__dotation-content {
  text-align: left;
  gap: 0;
  display: none;
  position: absolute;
  background-color: white;
  border: none;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 20%);
  padding: 10px;
  z-index: 1000;
}

.gsl-projet-table__dotation-content .fr-label {
  font-size: small;
}


.gsl-projet-table table tbody tr.gsl-projet-table__row--double-dotation td { /* cette longue liste est utile pour être plus spécifique que .gsl-projet-table table tbody tr td */
  border-bottom: 1px solid var(--border-disabled-grey);
}

.gsl-projet-table table tbody td.gsl-projet-table__cell--other-status {
  padding: 0;
  text-align: right;
}

.gsl-projet-table table tbody td.gsl-projet-table__cell--other-status.to_notify {
  padding: 0;
  text-align: right;
}

/* buttons */

.accept-button{
  background-color: var(--background-action-high-success);
  color: var(--background-alt-blue-france)
}

.accept-button:hover:not(:disabled){
  background-color: var(--background-action-high-success-hover) !important;
}

.refuse-button{
  background-color: var(--background-action-high-error);
  color: var(--background-alt-blue-france)
}

.refuse-button:hover:not(:disabled){
  background-color: var(--background-action-high-error-hover) !important;
}

.dismiss-button{
  background-color: var(--background-action-high-warning);
  color: var(--background-alt-blue-france)
}

.dismiss-button:hover:not(:disabled){
  background-color: var(--background-action-high-warning-hover) !important;
}

/* status select */

.gsl-projet-table td.gsl-projet-table__cell--status {
  padding: 0;
  text-align: right;
}

.gsl-projet-table td.gsl-projet-table__cell--status .gsl-projet-table__status-notified,
.gsl-projet-table td.gsl-projet-table__cell--other-status .gsl-projet-table__status-notified {
  padding: 4px;
  align-items: flex-end;
  display: flex;
  flex-direction: column;
}

.gsl-projet-table td.gsl-projet-table__cell--status .gsl-projet-table__status-notified > .gsl-projet-table__status-select {
  width: 100%;
}

.gsl-projet-table td .gsl-projet-table__status-select .fr-btn--sm,
.gsl-projet-table td .gsl-projet-table__status-select .fr-nav__link {
  font-size: .6rem;
  padding: .25rem 2rem .25rem .5rem;
  text-align: right;
  white-space: nowrap;
}

.gsl-projet-table .gsl-projet-table__status-button {
  font-weight: bold;
}

.gsl-projet-table .gsl-projet-table__status-select .fr-btn--tertiary {
  color: var(--text-default-grey);
}

.gsl-projet-table .gsl-projet-table__status-select--valid .fr-btn.fr-btn--tertiary {
  color: var(--text-default-success);
}

.gsl-projet-table .gsl-projet-table__status-select--cancelled .fr-btn.fr-btn--tertiary {
  color: var(--text-default-error);
}

.gsl-projet-table .gsl-projet-table__status-select--provisionally_accepted .fr-btn.fr-btn--tertiary {
  color: var(--text-default-info);
}

.gsl-projet-table .gsl-projet-table__status-select--provisionally_refused .fr-btn.fr-btn--tertiary {
  color: var(--text-action-high-orange-terre-battue);
}

.gsl-projet-table__status-option {
  justify-content: flex-start;
  gap: 8px;
}

/* text inputs */

.gsl-projet-table__input--valid {
  background-color: var(--background-alt-green-emeraude);
  box-shadow: inset 0 -2px 0 0 var(--background-action-high-success);
}

.gsl-projet-table__input--provisionally_accepted {
  background-color: var(--text-inverted-blue-ecume);
  box-shadow: inset 0 -2px 0 0 var(--border-action-high-info);
}

.gsl-projet-table__input--provisionally_refused {
  background-color: var(--background-contrast-brown-opera);
  box-shadow: inset 0 -2px 0 0 var(--text-action-high-orange-terre-battue);
}

.form-disabled-before-value-change > .fr-callout {
  background-image: linear-gradient(0deg, var(--background-action-high-blue-france), var(--background-action-high-blue-france))
}

/* export buttons */
.gsl-dropdown .export-btn-container {
  gap: 0;
}

.gsl-dropdown .export-btn {
  height: 100%;
  width: 200px;
}

